# lian

./: .editorconfig  .gitattributes  .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  ASSESSMENTS_AND_VALIDITY_RULES.md  CALENDAR_REMINDERS_AND_PLANNING.md  CONTRIBUTING.md  CORE_USER_FLOWS.md  Cargo.toml  DAILY_TRACKING_AND_PRACTICE_MODEL.md  DOMAIN_AND_DATA_CONTRACTS.md  FABLE_IMPLEMENTATION_HANDOFF.md  IMPLEMENTATION.md  LICENSE  LOCAL_FIRST_PRIVACY_AND_EXPORT.md  MANIFEST.md  PRODUCT_CHARTER.md  README.md  RESEARCH_AND_ANALYSIS_RULES.md  SCOPE_AND_NON_GOALS.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
contracts/: activity-event.contract.md  analysis-result.contract.md  assessment-session.contract.md  daily-checkin.contract.md  determination.contract.md  five-precepts.contract.md  planned-activity.contract.md  research-protocol.contract.md
crates/lian-core/: Cargo.toml
crates/lian-core/examples/: seed_demo.rs
crates/lian-core/src/: analysis.rs  api.rs  assessments.rs  backup.rs  db.rs  jsonq.rs  lib.rs  reminders.rs  repo_assess.rs  repo_daily.rs  repo_determinations.rs  repo_plans.rs  repo_research.rs  review.rs  seed.rs  settings.rs  util.rs
crates/lian-core/src/migrations/: 0001_init.sql  0002_protocol_analysis_spec.sql
crates/lian-core/tests/: integration.rs
docs/: RC_LOG.md  SMOKE_CHECKLIST.md
references/: GO_NO_GO_PROTOCOL_V1.md  OPEN_QUESTIONS.md  PVT_PROTOCOL_V1.md
scripts/: verify.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  autopilot.ts  format.ts  state.svelte.ts
src/lib/assessment/: gngMachine.test.ts  (+3 more)
(+21 files in other folders)
