[workspace]
resolver = "2"
members = ["crates/lian-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Private"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
thiserror = "2"
sha2 = "0.10"
csv = "1.3"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
