[package]
name = "lian-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LIAN — private, local-first practice and research workstation"

[lib]
name = "lian_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lian-core = { path = "../crates/lian-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
