[package]
name = "lian-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
sha2.workspace = true
csv.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
tempfile = "3"
